--- a/quiz-app/src/assets/main.css
+++ b/quiz-app/src/assets/main.css
@@ -57,6 +57,7 @@ body {
   height: 50px;
   background-color: #ff6372;
   transition: all 0.3s linear;
+
 }
 .status {
   position: absolute;
@@ -93,17 +94,29 @@ body {
   background-color: #fff;
   transition: 0.4s linear all;
   text-align: center;
+  -webkit-transition: 0.4s linear all;
+  -moz-transition: 0.4s linear all;
+  -ms-transition: 0.4s linear all;
+  -o-transition: 0.4s linear all;
 }
 .fade-enter-from {
   opacity: 0;
 }
 .fade-enter-active {
   transition: all 0.3s linear;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -ms-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
 }
 .fade-leave-active {
   transition: all 0.3s linear;
   opacity: 0;
   position: absolute;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -ms-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
 }
 .fade-leave-to {
   opacity: 0;
