--- a/quiz-app/src/assets/main.css
+++ b/quiz-app/src/assets/main.css
@@ -113,10 +113,10 @@ body {
   transition: all 0.3s linear;
   opacity: 0;
   position: absolute;
-  -webkit-transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  -ms-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
+  -webkit-transition:;
+  -moz-transition:;
+  -ms-transition:;
+  -o-transition:;
 }
 .fade-leave-to {
   opacity: 0;
